@@ -1,4 +1,6 @@
 ver 0.18.6 (not yet released)
+* input
+  - cdio_paranoia: support libcdio-paranoia 0.90
 
 ver 0.18.5 (2013/11/23)
 * configuration
